--- a/board/synexxus/aristeus/Makefile
+++ b/board/synexxus/aristeus/Makefile
@@ -1,7 +1,7 @@
 #
 # Copyright (C) 2012-2013, Guennadi Liakhovetski <lg@denx.de>
 # (C) Copyright 2012-2013 Freescale Semiconductor, Inc.
-# Copyright (C) 2013, Boundary Devices <info@boundarydevices.com>
+# Copyright (C) 2014, Synexxus, Inc. <jreep@synexxus.com>
 #
 # SPDX-License-Identifier:	GPL-2.0+
 #
